force-app/main/default/objects/Api_Request__c/Api_Request__c.object-meta.xml
<CustomObject>
    <label>Api Request</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Api Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Api Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>