force-app/main/default/objects/Api_Request__c/fields/AgeDuringAFDCmonth__c.field-meta.xml
<CustomField>
    <fullName>AgeDuringAFDCmonth__c</fullName>
    <label>AgeDuringAFDCmonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>