force-app/main/default/objects/Api_Request__c/fields/AssetValue__c.field-meta.xml
<CustomField>
    <fullName>AssetValue__c</fullName>
    <label>Asset Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>