force-app/main/default/objects/Api_Request__c/fields/ChildReceivingSSIOrSSADuringReviewPeriod__c.field-meta.xml
<CustomField>
    <fullName>ChildReceivingSSIOrSSADuringReviewPeriod__c</fullName>
    <label>ChildReceivingSSIOrSSADuringReviewPeriod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>