force-app/main/default/objects/Api_Request__c/fields/DepParentalSupp__c.field-meta.xml
<CustomField>
    <fullName>DepParentalSupp__c</fullName>
    <label>DepParentalSupp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>