force-app/main/default/objects/Api_Request__c/fields/DeprivationFactor__c.field-meta.xml
<CustomField>
    <fullName>DeprivationFactor__c</fullName>
    <label>DeprivationFactor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>