force-app/main/default/objects/Api_Request__c/fields/HasTheAgencyOptedToSuspendTheSSIPAymentA__c.field-meta.xml
<CustomField>
    <fullName>HasTheAgencyOptedToSuspendTheSSIPAymentA__c</fullName>
    <label>HasTheAgencyOptedToSuspendTheSSIPAymentA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>