force-app/main/default/objects/Api_Request__c/fields/IsTheAgencyTheRepresentativePayee__c.field-meta.xml
<CustomField>
    <fullName>IsTheAgencyTheRepresentativePayee__c</fullName>
    <label>IsTheAgencyTheRepresentativePayee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>