force-app/main/default/objects/Api_Request__c/fields/Placement_Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Placement_Reimbursable__c</fullName>
    <label>Placement Reimbursable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>