force-app/main/default/objects/Api_Request__c/fields/PlcmntDtErlThnRemDtr__c.field-meta.xml
<CustomField>
    <fullName>PlcmntDtErlThnRemDtr__c</fullName>
    <label>PlcmntDtErlThnRemDtr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>