force-app/main/default/objects/Api_Request__c/fields/RemDtEarlierThnCtOrderDt__c.field-meta.xml
<CustomField>
    <fullName>RemDtEarlierThnCtOrderDt__c</fullName>
    <label>RemDtEarlierThnCtOrderDt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>