force-app/main/default/objects/Api_Request__c/fields/SpRelClIdsameAsCtw__c.field-meta.xml
<CustomField>
    <fullName>SpRelClIdsameAsCtw__c</fullName>
    <label>SpRelClIdsameAsCtw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>