force-app/main/default/objects/Api_Request__c/fields/TotalAvailableIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalAvailableIncome__c</fullName>
    <label>TotalAvailableIncome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>