force-app/main/default/objects/Api_Request__c/fields/UsCorQA__c.field-meta.xml
<CustomField>
    <fullName>UsCorQA__c</fullName>
    <label>UsCorQA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>